<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/dp_64"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_battery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/testing"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_graph2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/test_history"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_64"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/rate_review"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/feedback"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/invite_friend"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>
